--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.4.0</version>
+    </parent>
     <groupId>com.ithillel</groupId>
     <artifactId>textProcessor</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>textProcessor</name>
     <dependencies>
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
@@ -28,6 +32,11 @@
             <artifactId>spring-context</artifactId>
             <version>5.2.11.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring</artifactId>
+            <version>5.2.9.RELEASE</version>
+        </dependency>
 
 
     </dependencies>
@@ -37,6 +46,5 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <project.java.version>1.8</project.java.version>
     </properties>
-
 
 </project>
